fix: reduce gap between dots in carousel for improved layout

--- a/src/input.css
+++ b/src/input.css
@@ -7636,7 +7636,7 @@ footer ul li {
 .real-results-carousel.owl-theme .owl-dots {
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 4px;
   justify-content: center;
   padding-top: 20px;
 }
